--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'org.jetbrains.kotlin.android'
 }
 
 android {
@@ -26,6 +27,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    kotlinOptions {
+        jvmTarget = 1.8
+    }
     buildFeatures {
         viewBinding true
         dataBinding true
@@ -33,6 +37,10 @@ android {
 }
 
 dependencies {
+
+    implementation 'io.insert-koin:koin-core:3.5.0'
+    implementation 'io.insert-koin:koin-android:3.5.0'
+    implementation 'org.jetbrains.kotlin:kotlin-reflect'
 
     implementation 'androidx.annotation:annotation:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.2'
