--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,15 +37,18 @@ android {
 }
 
 dependencies {
+    def room_version = "2.6.0"
+    def koin_version = "3.5.0"
 
-    implementation 'io.insert-koin:koin-core:3.5.0'
-    implementation 'io.insert-koin:koin-android:3.5.0'
+
+    implementation "io.insert-koin:koin-core:$koin_version"
+    implementation "io.insert-koin:koin-android:$koin_version"
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
 
     implementation 'androidx.annotation:annotation:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.2'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2'
-    def room_version = "2.6.0"
+
 
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
@@ -55,6 +58,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
+
+    implementation 'org.mockito:mockito-core:5.7.0'
+    implementation 'org.mockito:mockito-android:5.7.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation "androidx.arch.core:core-testing:2.2.0"
 }
