--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@
 .externalNativeBuild
 .cxx
 local.properties
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/dictionaries
+.idea/androidTestResultsUserPreferences.xml
+.idea/deploymentTargetDropDown.xml
+.idea/shelf/*
