--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,9 +59,13 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
 
-    implementation 'org.mockito:mockito-core:5.7.0'
-    implementation 'org.mockito:mockito-android:5.7.0'
+    testImplementation 'org.mockito:mockito-core:5.7.0'
+    androidTestImplementation 'org.mockito:mockito-android:5.7.0'
+    implementation 'net.bytebuddy:byte-buddy:1.14.9'
+    androidTestImplementation "androidx.arch.core:core-testing:2.2.0"
+
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation "androidx.arch.core:core-testing:2.2.0"
+
 }
